--- a/Web/angular-app/acme-app/fragments/productdetails.html
+++ b/Web/angular-app/acme-app/fragments/productdetails.html
@@ -37,6 +37,7 @@
                                 <span class="stars alignleft">
                                     <span ng-style="{'width': getStars(Singleproduct.starRating)}"></span>
                                 </span>
+                                <!-- <average-star-rating ng-model="3.5" max="5"></average-star-rating> -->
                             </td>
                         </tr>
                     </tbody>
